# umm

./: .gitignore  Dockerfile  plot_attn.py  pyproject.toml
src/: chat.py  edit.py  eval_wino.py  flickr.py  flickr_preprocess.py  qwen.py  utils.py  winoground.py  winoground_qwen.py
src/data/: __init__.py
src/metrics/: sscd.py
src/models/: __init__.py  bagel.py  bagel_chat_pipeline.py  bagel_pipeline.py  flux_dev.py  qwen_image_edit.py
src/models/bagel/: EVAL.md
src/models/bagel/eval/vlm/eval/pope/: evaluate_pope.py
src/models/bagel/modeling/bagel/: bagel.py  qwen2_navit.py
