[project]
name = "umm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "diffusers",
    "flash-attn==2.7.4.post1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "opencv-python>=4.12.0.88",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
